--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,9 +17,28 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
+      VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
+      VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
+      VITE_FIREBASE_STORAGE: ${{ secrets.VITE_FIREBASE_STORAGE }}
+      VITE_FIREBASE_MSG_SENDER: ${{ secrets.VITE_FIREBASE_MSG_SENDER }}
+      VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID }}
+      VITE_MAPTILER_KEY: ${{ secrets.VITE_MAPTILER_KEY }}
+      VITE_BASE_PATH: /GarageSaleMap/
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Verify configuration
+        run: |
+          for key in VITE_FIREBASE_API_KEY VITE_FIREBASE_AUTH_DOMAIN VITE_FIREBASE_PROJECT_ID VITE_FIREBASE_STORAGE VITE_FIREBASE_MSG_SENDER VITE_FIREBASE_APP_ID; do
+            if [ -z "${!key}" ]; then
+              echo "Missing required secret: $key" >&2
+              exit 1
+            fi
+          done
+        shell: bash
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -32,8 +51,6 @@ jobs:
 
       - name: Build
         run: npm run build
-        env:
-          VITE_BASE_PATH: /GarageSaleMap/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
